<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/margin1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/dangKy"
                android:textColor="@color/colorOrange"
                android:textSize="30sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputTenDangNhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtDkTenDangNhap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tenDangNhap" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtDkMatKhau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/matKhau"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputNhapMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtDkNhapLaiMatKhau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nhapLaiMatKhau"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/activity_vertical_margin" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>