<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrangeLight"
    android:gravity="center_vertical"
    tools:context="dev.linhnv.fptuct.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ssLogo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:adjustViewBounds="true"
                android:contentDescription=""
                app:srcCompat="@drawable/logo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_text_input_layout"
                style="@style/TextAppearance.App.TextInputLayout.HightLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/edtTenDangNhap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tenDangNhap"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/TextAppearance.App.TextInputLayout.HightLight"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_text_input_layout"
                style="@style/TextAppearance.App.TextInputLayout.HightLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/edtMatKhau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/matKhau"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/TextAppearance.App.TextInputLayout.HightLight"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>

            <com.dx.dxloadingbutton.lib.LoadingButton
                android:id="@+id/btnDangNhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:lb_btnColor="@color/colorWhite"
                app:lb_btnRippleColor="#a5a5a5"
                app:lb_btnText="@string/dangNhap"
                app:lb_textColor="@color/colorOrange" />

            <TextView
                android:id="@+id/tvDangNhapBang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/dangNhapBang"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="43dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/facebook_icon"
                    android:drawableLeft="@null"
                    android:paddingBottom="11dp"
                    android:paddingTop="11dp"
                    android:textSize="7pt"
                    app:com_facebook_logout_text=""
                    app:com_facebook_login_text="" />

                <Button
                    android:id="@+id/btnLoginGoogle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/google_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTaoTaiKhoan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:text="@string/taoTaiKhoan"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorWhite"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tvQuenMatKhau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:text="@string/quenMatKhau"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>

